Example for swagger
