# docs/swagger.json
@@ -405,7 +405,36 @@
 					"longitude",
 					"latitude",
 					"sports",
-					"pictures"
+					"pictures",
+					"rating"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GPSArea": {
+				"properties": {
+					"min_lon": {
+						"type": "number",
+						"format": "double"
+					},
+					"min_lat": {
+						"type": "number",
+						"format": "double"
+					},
+					"max_lon": {
+						"type": "number",
+						"format": "double"
+					},
+					"max_lat": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"min_lon",
+					"min_lat",
+					"max_lon",
+					"max_lat"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -655,15 +684,16 @@
 						"type": "number",
 						"format": "double"
 					},
-					"longitude": {
-						"type": "number",
-						"format": "double",
-						"nullable": true
-					},
 					"latitude": {
 						"type": "number",
-						"format": "double",
-						"nullable": true
+						"format": "double"
+					},
+					"longitude": {
+						"type": "number",
+						"format": "double"
+					},
+					"gps_area": {
+						"$ref": "#/components/schemas/GPSArea"
 					},
 					"installation": {
 						"allOf": [
@@ -807,11 +837,44 @@
 					}
 				],
 				"requestBody": {
+					"description": "Filters for finding the equipment,\nexample -> Finding volley-ball equipment arround Lannion in an area of 20km^2.\nMust have locker, lighting, shower, handi-access.\nWhere Equipment/Installation name like 'Collège'\nand soil type is beton or synt. Distance is in meters",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/IEquipment"
+							},
+							"example": {
+								"name": "Collège",
+								"locker": true,
+								"lighting": true,
+								"shower": true,
+								"sports": [
+									{
+										"code": "volley"
+									}
+								],
+								"latitude": 48.7333,
+								"longitude": -3.4667,
+								"gps_area": {
+									"max_lat": 48.7922383,
+									"max_lon": -3.367779,
+									"min_lat": 48.6718575,
+									"min_lon": -3.5502904
+								},
+								"installation": {
+									"name": "Collège",
+									"disabled_access": true
+								},
+								"soil_type": [
+									{
+										"code": "beton"
+									},
+									{
+										"code": "synt"
+									}
+								],
+								"distance": 10000
 							}
 						}
 					}
