# src/app/routes.ts
@@ -158,8 +158,19 @@ const models: TsoaRoute.Models = {
             "equipment_level": {"dataType":"union","subSchemas":[{"ref":"EquipmentLevel"},{"dataType":"enum","enums":[null]}]},
             "sports": {"dataType":"array","array":{"ref":"Sport"},"required":true},
             "pictures": {"dataType":"array","array":{"ref":"Picture"},"required":true},
-            "rating": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}]},
+            "rating": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}],"required":true},
             "distance": {"dataType":"double"},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GPSArea": {
+        "dataType": "refObject",
+        "properties": {
+            "min_lon": {"dataType":"double","required":true},
+            "min_lat": {"dataType":"double","required":true},
+            "max_lon": {"dataType":"double","required":true},
+            "max_lat": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
@@ -296,8 +307,9 @@ const models: TsoaRoute.Models = {
             "lighting": {"dataType":"union","subSchemas":[{"dataType":"boolean"},{"dataType":"enum","enums":[null]}]},
             "shower": {"dataType":"union","subSchemas":[{"dataType":"boolean"},{"dataType":"enum","enums":[null]}]},
             "amount": {"dataType":"double"},
-            "longitude": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}]},
-            "latitude": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}]},
+            "latitude": {"dataType":"double"},
+            "longitude": {"dataType":"double"},
+            "gps_area": {"ref":"GPSArea"},
             "installation": {"dataType":"union","subSchemas":[{"ref":"IInstallation"},{"dataType":"enum","enums":[null]}]},
             "owner": {"dataType":"union","subSchemas":[{"ref":"IOwner"},{"dataType":"enum","enums":[null]}]},
             "soil_type": {"dataType":"union","subSchemas":[{"dataType":"array","array":{"ref":"ISoilType"}},{"dataType":"enum","enums":[null]}]},
